Added Custom Text and Saving Options

--- a/Hello_World/Hello_World.rc
+++ b/Hello_World/Hello_World.rc
@@ -169,6 +169,7 @@ BEGIN
     BEGIN
         MENUITEM "Circle",                      ID_DRAW_CIRCLE
         MENUITEM "Rectangle",                   ID_DRAW_RECTANGLE
+        MENUITEM "Set Text",                    ID_DRAW_CHANGETEXT
     END
 END
 
@@ -224,8 +225,19 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
     LTEXT           "Hello_World, Version 1.1",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2018",IDC_STATIC,42,26,114,8
+    LTEXT           "Team 24 Senior Design Project",IDC_STATIC,42,26,114,8
     DEFPUSHBUTTON   "OK",IDOK,113,41,50,14,WS_GROUP
+END
+
+IDD_DIALOG1 DIALOGEX 0, 0, 310, 74
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Set Text"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,199,53,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,252,53,50,14
+    EDITTEXT        IDC_EDIT_Txt,73,19,222,14,ES_AUTOHSCROLL
+    LTEXT           "Text to Draw",IDC_STATIC,19,22,44,8
 END
 
 
@@ -283,6 +295,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 55
     END
+
+    IDD_DIALOG1, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 302
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 67
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -293,6 +313,11 @@ END
 //
 
 IDD_ABOUTBOX AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_DIALOG1 AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
