--- a/Hello_World/Hello_World.vcxproj.filters
+++ b/Hello_World/Hello_World.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SetTxtDlg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Hello_World.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Hello_WorldView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SetTxtDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
