--- a/Hello_World/Hello_World.rc
+++ b/Hello_World/Hello_World.rc
@@ -102,7 +102,7 @@ BEGIN
     BUTTON      ID_APP_ABOUT
 END
 
-IDR_MAINFRAME_256 TOOLBAR 16, 15
+IDR_MAINFRAME_256 TOOLBAR 21, 23
 BEGIN
     BUTTON      ID_FILE_NEW
     BUTTON      ID_FILE_OPEN
@@ -114,6 +114,7 @@ BEGIN
     SEPARATOR
     BUTTON      ID_FILE_PRINT
     BUTTON      ID_APP_ABOUT
+    BUTTON      ID_BUTTON_MOVE
 END
 
 
